--- a/src/Dashboard/User/user.css
+++ b/src/Dashboard/User/user.css
@@ -163,3 +163,11 @@
     border-radius: 30px !important;
   }
   
+
+  .sweet-loading{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
+    z-index: 100;
+}
