--- a/src/Dashboard/dashbord.css
+++ b/src/Dashboard/dashbord.css
@@ -162,3 +162,10 @@ body{
     opacity: 0.4!important;
 }
 
+.sweet-loading{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
+    z-index: 100;
+}
