--- a/src/styling/profile.css
+++ b/src/styling/profile.css
@@ -51,3 +51,11 @@ body{
 .shadow-none {
     box-shadow: none!important;
 }
+
+.sweet-loading{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
+    z-index: 100;
+}
